--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>How to Log In to the Xfinity Stream App or TV Portal</title>
     <meta name="description" content="Learn how to log in to the Xfinity Stream App or TV Portal with this complete guide. Includes steps, troubleshooting tips, and all important Comcast TV login related keywords.">
     <meta name="keywords" content="Comcast TV Login, Xfinity Stream Login, Xfinity TV Portal Login, Comcast Xfinity Account Access, Xfinity TV App Sign In, Comcast Stream Login Guide">
-
+<meta name="msvalidate.01" content="3727F3C459FA0A3639D9164F41F7C074" />
+    <meta name="google-site-verification" content="xNoFAXn3Hpej5nR4Euh65j1ocqP0ktWo2Lo7dyRtb60" />
     <style>
         body {
             margin: 0;
